--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -23,6 +23,8 @@
 @import "blocks/modal";
 
 @import "blocks/header.scss";
+@import "blocks/main.scss";
+@import "blocks/nav.scss";
 
 // ---------------------------------
 
