--- a/source/sass/blocks/btn.scss
+++ b/source/sass/blocks/btn.scss
@@ -3,37 +3,30 @@
 
   display: inline-flex;
   justify-content: center;
-  padding: 19px 24px;
+  padding: 10px 15px;
 
-  border: 4px solid $color-default-white;
-  background-color: $color-transparent;
+  border: 1px solid $color-default-black;
+  border-radius: 4px;
+  background-color: $color-tangerine-yellow;
 
   cursor: pointer;
 
-  font: 700 12px/120% $ff-roboto-condensed;
+  font: 700 14px/100% $ff-roboto-condensed;
   text-transform: uppercase;
-  letter-spacing: 0.05em;
-  color: $color-default-white;
+  color: $color-default-black;
 
   transition: opacity $trans-default;
 
   @media (hover: hover), screen and (min-width: 0\0) {
     &:hover,
     &:focus {
-      opacity: 0.8;
-      color: $color-default-white;
-      background: linear-gradient(to bottom, $color-torch-red 30%, $color-smalt);
+      opacity: 0.7;
     }
   }
 
   &:disabled {
-    opacity: 0.5;
+    opacity: 0.3;
 
     pointer-events: none;
-  }
-
-  &--dark {
-    border: 2px solid $color-sapphire;
-    color: $color-sapphire;
   }
 }
