--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,12 +1,16 @@
 .header {
-    height: 70vh;
-    background-color: $color-light-slate-grey;
+    position: sticky;
+    top: 0;
+    min-height: 90px;
+    padding: 0 20px;
 
-    .container {
-        width: 100%;
-        height: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-items: center;
+    background-color: $color-default-white;
+}
+
+.header__call {
+    align-self: center;
 }
