--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -10,24 +10,7 @@ $color-transparent:                 rgba(255, 255, 255, 0);
 // Project palette
 // для нейминга цветов используем https://www.htmlcsscolor.com/hex/334482
 
-$color-neon-blue:                   #2c39f2;
-$color-sapphire:                    #102654;
-$color-dark-cerulean:               #003d85;
-$color-venetian-red:                #b80027;
-$color-cobalt:                      #003eb7;
-$color-torch-red:                   #ed0233;
-$color-ghost-white:                 #f8f9fc;
-$color-grey:                        #787878;
-$color-crimson:                     #d10a42;
-$color-chambray:                    #495a7d;
-$color-egyptian-blue:               #103aae;
-$color-whisper:                     #e8e8e8;
-$color-smalt:                       #00359f;
-$color-spindle:                     #b6bdcc;
-$color-resolution-blue:             #1c3374;
-$color-persian-blue:                #2e35ac;
-$color-light-slate-grey:            #74819c;
-$color-black-russian:               #030a1a;
+$color-tangerine-yellow: #ffcc00;
 
 // Gradient
 
