--- a/source/sass/global/utils.scss
+++ b/source/sass/global/utils.scss
@@ -5,7 +5,7 @@
   padding: 0;
 
   display: grid;
-  grid-template-rows: auto 1fr auto;
+  grid-template-rows: 90px 1fr auto;
   align-content: start;
   min-height: 100vh;
   /* stylelint-disable-next-line */
