--- a/source/sass/blocks/main.scss
+++ b/source/sass/blocks/main.scss
@@ -1,3 +1,5 @@
 .main {
-    background-color: teal;
+    background-image: url("../img/content/background.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
