--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -25,6 +25,7 @@
 @import "blocks/header.scss";
 @import "blocks/main.scss";
 @import "blocks/nav.scss";
+@import "blocks/intro.scss";
 
 // ---------------------------------
 
