--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -24,8 +24,10 @@
 
 @import "blocks/header.scss";
 @import "blocks/main.scss";
+@import "blocks/section.scss";
 @import "blocks/nav.scss";
 @import "blocks/intro.scss";
+@import "blocks/services.scss";
 
 // ---------------------------------
 
