desktop finish wo slider

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -28,6 +28,13 @@
 @import "blocks/nav.scss";
 @import "blocks/intro.scss";
 @import "blocks/services.scss";
+@import "blocks/about-us.scss";
+@import "blocks/works.scss";
+@import "blocks/reviews.scss";
+@import "blocks/request.scss";
+@import "blocks/form.scss";
+@import "blocks/contacts.scss";
+@import "blocks/footer.scss";
 
 // ---------------------------------
 
