--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -10,7 +10,9 @@ $color-transparent:                 rgba(255, 255, 255, 0);
 // Project palette
 // для нейминга цветов используем https://www.htmlcsscolor.com/hex/334482
 
-$color-tangerine-yellow: #ffcc00;
+$color-tangerine-yellow:    #ffcc00;
+$color-night-rider:         #333333;
+$color-whisper:             #ededed;
 
 // Gradient
 
