--- a/source/sass/blocks/main.scss
+++ b/source/sass/blocks/main.scss
@@ -2,4 +2,5 @@
     background-image: url("../img/content/background.jpg");
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
 }
