--- a/source/sass/blocks/nav.scss
+++ b/source/sass/blocks/nav.scss
@@ -48,5 +48,6 @@
     display: flex;
     align-items: center;
     padding: 0 15px;
+    font: 400 20px/120% $ff-roboto-condensed;
     transition: background $trans-default;
 }
