--- a/source/sass/blocks/services.scss
+++ b/source/sass/blocks/services.scss
@@ -1,5 +1,6 @@
 .services {
     min-height: 100vh;
+    padding: 100px 0;
     display: flex;
 }
 
@@ -25,6 +26,7 @@
 }
 
 .services__item {
+    @include unselectable;
     min-height: 80px;
     padding-left: 60px;
     display: flex;
@@ -33,7 +35,6 @@
     text-transform: uppercase;
     background-color: $color-tangerine-yellow;
     transition: background $trans-default;
-    cursor: pointer;
 
     &::before {
         content: "";
@@ -60,4 +61,33 @@
     margin: 0;
     padding: 0;
     list-style: none;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
+    counter-reset: keypoint;
+}
+
+.services__key-points-item {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    min-height: 200px;
+    background-color: $color-tangerine-yellow;
+
+    font: 600 28px/120% $ff-roboto-condensed;
+    text-transform: uppercase;
+    text-align: center;
+
+    &::after {
+        counter-increment: keypoint;
+        content: counter(keypoint);
+        position: absolute;
+        right: 0;
+        top: 0;
+        font: 700 256px/100% $ff-roboto-condensed;
+        color: $color-default-black;
+        opacity: 0.2;
+    }
 }
