visual updates, swiper

--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -12,6 +12,9 @@
     background-color: $color-default-white;
 }
 
-.header__call {
-    align-self: center;
+.header__logo {
+    img {
+        width: 250px;
+        height: 70px;
+    }
 }
