--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -13,6 +13,7 @@ $color-transparent:                 rgba(255, 255, 255, 0);
 $color-tangerine-yellow:    #ffcc00;
 $color-night-rider:         #333333;
 $color-whisper:             #ededed;
+$color-white-smoke:         #f2f2f2;
 
 // Gradient
 
