--- a/source/sass/blocks/about-us.scss
+++ b/source/sass/blocks/about-us.scss
@@ -8,6 +8,10 @@
     display: flex;
     flex-direction: column;
     padding: 30px;
+    background-image: url("../img/content/block-1.jpg");
+    background-repeat: no-repeat;
+    background-position: -650px 0;
+    background-size: auto 100%;
 }
 
 .about-us__title {
@@ -35,6 +39,10 @@
     align-items: center;
     font: 700 28px/120% $ff-roboto-condensed;
     text-transform: uppercase;
+
+    &:not(:last-child) {
+        margin-bottom: 20px;
+    }
 
     &::before {
         content: "";
