--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,32 +1,41 @@
 .contacts {
-    padding: 72px 0;
-    background-color: $color-whisper;
+    position: relative;
+    //padding: 72px 0;
+    background-color: $color-white-smoke;
+
+    iframe {
+        margin: 0;
+        padding: 0;
+        border: none;
+        width: 100%;
+        height: 840px;
+    }
 }
 
-.contacts__contents {
+.contacts__info {
+    position: absolute;
+    z-index: 1;
+    top: 200px;
+    left: 60px;
+
+    background-color: $color-tangerine-yellow;
+    border-radius: 10px;
+    border: 1px solid $color-default-black;        
+    padding: 30px 50px;
     display: flex;
     flex-direction: column;
-    padding: 30px;
-}
+}        
 
 .contacts__title {
+    margin-top: 0;
     font: 700 36px/120% $ff-roboto-condensed;
     color: $color-default-black;
     text-align: left;
 }
 
-.contacts__wrapper {
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-    column-gap: 60px;
-}
-
-.contacts__info {
-    display: flex;
-    flex-direction: column;
-}
-
 .contacts__item {
+    margin: 0;
+
     span:first-child {
         display: block;
         font: 700 20px/120% $ff-roboto-condensed;
@@ -34,31 +43,6 @@
 
     span:not(:first-child) {
         font: 400 16px/120% $ff-roboto-condensed;
-    }
-}
-
-.contacts__map {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 65%;
-    padding-bottom: 70%;
-
-    div {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-    }
-
-    iframe {
-        border: none;
-        width: 100%;
-        height: 100%;
     }
 }
 
