--- a/source/sass/blocks/main.scss
+++ b/source/sass/blocks/main.scss
@@ -3,4 +3,6 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
+    display: flex;
+    flex-flow: column nowrap;
 }
