--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -5,9 +5,14 @@
 }
 
 .reviews__contents {
+    height: 900px;
     display: flex;
     flex-direction: column;
     padding: 30px;
+    background-image: url("../img/content/block-3.jpg");
+    background-repeat: no-repeat;
+    background-position: -1450px 0;
+    background-size: auto 900px;
 }
 
 .reviews__title {
@@ -18,7 +23,8 @@
 }
 
 .reviews__button {
+    margin-top: 80px;
     align-self: center;
-    font-size: 32px;
-    padding: 20px 25px;
+    font-size: 36px;
+    padding: 30px 35px;
 }
