--- a/source/sass/blocks/works.scss
+++ b/source/sass/blocks/works.scss
@@ -11,31 +11,35 @@
 }
 
 .works__title {
+    margin-bottom: 40px;
     font: 700 48px/120% $ff-roboto-condensed;
     color: $color-default-black;
     text-align: center;
-    margin-bottom: 20px;
 }
 
 .works__swiper {
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
+    padding: 50px 0;
+    width: 1330px;
+    //display: flex;
+    //flex-direction: column;
+    //gap: 15px;
 }
 
 .works__slide {
     @include unselectable;
     position: relative;
-    max-height: 500px;
-    padding-bottom: 66.5%;
-    background-color: tomato;
+    width: 600px;
+    height: 600px;
+
 
     img {
+        display: block;
         width: 100%;
         height: 100%;
-        position: absolute;
-        top: 0;
-        left: 0;
+        //position: absolute;
+        //padding-bottom: 66.5%;
+        //top: 0;
+        //left: 0;
         object-fit: cover;
       }
 }
